--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
     <div id="left-panel" class="w-1/5 bg-white shadow-md p-4">
         <h3 class="text-lg font-semibold mb-2">Slides</h3>
         <div id="slides" class="mb-4"></div>
-        <button id="add-slide" class="w-full bg-blue-500 text-white py-2 rounded hover:bg-blue-600 transition">Add Slide</button>
+        <button id="add-slide" class="w-full bg-blue-500 text-white py-2 rounded hover:bg-blue-600 transition">Add
+            Slide</button>
     </div>
 
     <div id="slides-container" class="flex-1 flex flex-col p-4">
         <div id="controls" class="mb-4">
-            <button id="edit-mode" class="bg-green-500 text-white py-2 px-4 rounded hover:bg-green-600 transition">Toggle Edit Mode</button>
+            <button id="edit-mode"
+                class="bg-green-500 text-white py-2 px-4 rounded hover:bg-green-600 transition">Toggle Edit
+                Mode</button>
         </div>
         <div id="slide-area" class="flex-1 bg-white border border-gray-300 rounded p-4 overflow-auto">
             <!-- Canvas will be added here for drawing -->
@@ -44,14 +47,18 @@
         let y = 0;
         let currentSlideId = null;
         const drawings = {}; // Store drawings for each slide
+        let userRole = 'viewer'; // Default role as viewer
 
         const nickname = prompt("Enter your nickname");
         const presentationId = prompt("Enter presentation ID or create new");
 
         socket.emit('join_presentation', { presentationId, nickname });
 
-        // Handle user updates
+        // Handle user updates and set user role
         socket.on('update_users', (users) => {
+            const user = users[socket.id];
+            userRole = user.role; // Update the user's role
+
             const usersList = document.getElementById('users-list');
             usersList.innerHTML = '';
             Object.keys(users).forEach(userId => {
@@ -124,31 +131,34 @@
             // Draw previously saved lines if any
             renderDrawings(slideId);
 
-            canvas.addEventListener('mousedown', (e) => {
-                const rect = canvas.getBoundingClientRect();
-                x = e.clientX - rect.left;
-                y = e.clientY - rect.top;
-                isDrawing = true;
-            });
-
-            canvas.addEventListener('mousemove', (e) => {
-                if (isDrawing) {
+            // Only allow drawing for editors
+            if (userRole === 'editor') {
+                canvas.addEventListener('mousedown', (e) => {
                     const rect = canvas.getBoundingClientRect();
-                    const newX = e.clientX - rect.left;
-                    const newY = e.clientY - rect.top;
-                    drawLine(ctx, x, y, newX, newY);
-                    socket.emit('draw', { presentationId, slideId, x, y, newX, newY });
-                    if (!drawings[slideId]) {
-                        drawings[slideId] = [];
-                    }
-                    drawings[slideId].push({ x, y, newX, newY });
-                    x = newX;
-                    y = newY;
-                }
-            });
+                    x = e.clientX - rect.left;
+                    y = e.clientY - rect.top;
+                    isDrawing = true;
+                });
 
-            canvas.addEventListener('mouseup', () => isDrawing = false);
-            canvas.addEventListener('mouseout', () => isDrawing = false);
+                canvas.addEventListener('mousemove', (e) => {
+                    if (isDrawing) {
+                        const rect = canvas.getBoundingClientRect();
+                        const newX = e.clientX - rect.left;
+                        const newY = e.clientY - rect.top;
+                        drawLine(ctx, x, y, newX, newY);
+                        socket.emit('draw', { presentationId, slideId, x, y, newX, newY });
+                        if (!drawings[slideId]) {
+                            drawings[slideId] = [];
+                        }
+                        drawings[slideId].push({ x, y, newX, newY });
+                        x = newX;
+                        y = newY;
+                    }
+                });
+
+                canvas.addEventListener('mouseup', () => isDrawing = false);
+                canvas.addEventListener('mouseout', () => isDrawing = false);
+            }
 
             socket.on('draw_line', ({ slideId: receivedSlideId, x, y, newX, newY }) => {
                 if (receivedSlideId === currentSlideId) {
