--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
 
     <div id="slides-container" class="flex-1 flex flex-col p-4">
         <div id="controls" class="mb-4">
-            <button id="edit-mode"
-                class="bg-green-500 text-white py-2 px-4 rounded hover:bg-green-600 transition">Toggle Edit
-                Mode</button>
             <button id="eraser-mode"
                 class="bg-red-500 text-white py-2 px-4 rounded hover:bg-red-600 transition">Eraser</button>
             <button id="export-pdf"
@@ -47,231 +44,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script> <!-- Include the Socket.IO client -->
-    <script>
-        const socket = io('http://127.0.0.1:3000');  // Initialize the WebSocket connection
-        let isDrawing = false;
-        let isErasing = false; // Track whether eraser mode is active
-        let x = 0;
-        let y = 0;
-        let currentSlideId = null;
-        const drawings = {}; // Store drawings for each slide
-        let userRole = 'viewer'; // Default role as viewer
-
-        const nickname = prompt("Enter your nickname");
-        const presentationId = prompt("Enter presentation ID or create new");
-
-        socket.emit('join_presentation', { presentationId, nickname });
-
-        // Handle user updates and set user role
-        socket.on('update_users', (users) => {
-            const user = users[socket.id];
-            userRole = user.role; // Update the user's role
-
-            const usersList = document.getElementById('users-list');
-            usersList.innerHTML = '';
-            Object.keys(users).forEach(userId => {
-                const user = users[userId];
-                const userItem = document.createElement('li');
-                userItem.className = 'py-1 border-b border-gray-200 flex justify-between items-center';
-                userItem.textContent = `${user.nickname} (${user.role})`;
-
-                const toggleButton = document.createElement('button');
-                toggleButton.className = `ml-2 py-1 px-2 rounded transition ${user.role === 'editor' ? 'bg-red-500 text-white hover:bg-red-600' : 'bg-blue-500 text-white hover:bg-blue-600'}`;
-                toggleButton.textContent = user.role === 'editor' ? 'Revoke Edit' : 'Make Editor';
-
-                toggleButton.onclick = () => {
-                    const newRole = user.role === 'editor' ? 'viewer' : 'editor';
-                    socket.emit('assign_role', { userId, role: newRole });
-                };
-
-                userItem.appendChild(toggleButton);
-                usersList.appendChild(userItem);
-            });
-        });
-
-        // Handle slides update
-        const slidesContainer = document.getElementById('slides');
-        socket.on('slides_updated', (slides) => {
-            slidesContainer.innerHTML = '';
-            slides.forEach((slide, index) => {
-                const slideDiv = document.createElement('div');
-                slideDiv.className = 'bg-gray-200 text-center p-2 mb-2 cursor-pointer rounded hover:bg-gray-300 transition';
-                slideDiv.textContent = `Slide ${index + 1}`;
-                slideDiv.addEventListener('click', () => showSlide(index));
-                slidesContainer.appendChild(slideDiv);
-            });
-        });
-
-        // Event handler for receiving existing drawings when a user joins
-        socket.on('drawings_updated', (drawingsData) => {
-            Object.keys(drawingsData).forEach(slideId => {
-                drawings[slideId] = drawingsData[slideId]; // Store the received drawings
-            });
-
-            // Optionally, render the drawings for the currently visible slide
-            if (currentSlideId !== null) {
-                renderDrawings(currentSlideId);
-            }
-        });
-
-        document.getElementById('add-slide').addEventListener('click', () => {
-            socket.emit('add_slide');
-        });
-
-        socket.on('slide_updated', ({ slideId, content }) => {
-            if (document.getElementById('slide-area').textContent.includes(`Slide ${slideId}`)) {
-                document.getElementById('slide-area').textContent = content;
-            }
-        });
-
-        // Add event listener for eraser mode button
-        document.getElementById('eraser-mode').addEventListener('click', () => {
-            isErasing = !isErasing; // Toggle eraser mode
-            const button = document.getElementById('eraser-mode');
-            button.classList.toggle('bg-gray-500', isErasing);
-            button.classList.toggle('hover:bg-gray-600', isErasing);
-            button.textContent = isErasing ? 'Drawing' : 'Eraser';
-        });
-
-        function showSlide(slideId) {
-            currentSlideId = slideId;
-            const slideArea = document.getElementById('slide-area');
-            slideArea.innerHTML = ''; // Clear previous content
-
-            const canvas = document.createElement('canvas');
-            canvas.width = slideArea.clientWidth;
-            canvas.height = slideArea.clientHeight;
-            canvas.dataset.slideId = slideId; // Store slide ID in the canvas element
-            slideArea.appendChild(canvas);
-            const ctx = canvas.getContext('2d');
-
-            // Draw previously saved lines if any
-            renderDrawings(slideId);
-
-            // Only allow drawing for editors
-            if (userRole === 'editor') {
-                canvas.addEventListener('mousedown', (e) => {
-                    const rect = canvas.getBoundingClientRect();
-                    x = e.clientX - rect.left;
-                    y = e.clientY - rect.top;
-                    isDrawing = true;
-                });
-
-                canvas.addEventListener('mousemove', (e) => {
-                    if (isDrawing) {
-                        const rect = canvas.getBoundingClientRect();
-                        const newX = e.clientX - rect.left;
-                        const newY = e.clientY - rect.top;
-
-                        if (isErasing) {
-                            // Erasing logic
-                            eraseLine(ctx, newX, newY);
-                            socket.emit('erase', { presentationId, slideId, newX, newY });
-                        } else {
-                            drawLine(ctx, x, y, newX, newY);
-                            socket.emit('draw', { presentationId, slideId, x, y, newX, newY });
-                            if (!drawings[slideId]) {
-                                drawings[slideId] = [];
-                            }
-                            drawings[slideId].push({ x, y, newX, newY });
-                        }
-
-                        x = newX;
-                        y = newY;
-                    }
-                });
-
-                canvas.addEventListener('mouseup', () => {
-                    isDrawing = false;
-                });
-                canvas.addEventListener('mouseout', () => {
-                    isDrawing = false;
-                });
-            }
-
-            socket.on('draw_line', ({ slideId: receivedSlideId, x, y, newX, newY }) => {
-                if (receivedSlideId === currentSlideId) {
-                    drawLine(ctx, x, y, newX, newY);
-                    if (!drawings[receivedSlideId]) {
-                        drawings[receivedSlideId] = [];
-                    }
-                    drawings[receivedSlideId].push({ x, y, newX, newY });
-                }
-            });
-
-            // Handle erase events from other users
-            socket.on('erase_line', ({ slideId: receivedSlideId, newX, newY }) => {
-                if (receivedSlideId === currentSlideId) {
-                    eraseLine(ctx, newX, newY);
-                }
-            });
-        }
-
-        function renderDrawings(slideId) {
-            const slideArea = document.getElementById('slide-area');
-            const canvas = slideArea.querySelector('canvas[data-slide-id="' + slideId + '"]');
-            if (canvas) {
-                const ctx = canvas.getContext('2d');
-                ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear the canvas before redrawing
-                if (drawings[slideId]) {
-                    drawings[slideId].forEach(({ x, y, newX, newY }) => {
-                        drawLine(ctx, x, y, newX, newY); // Render each line on the canvas
-                    });
-                }
-            }
-        }
-
-        function drawLine(ctx, x, y, newX, newY) {
-            ctx.beginPath();
-            ctx.moveTo(x, y);
-            ctx.lineTo(newX, newY);
-            ctx.strokeStyle = 'black';
-            ctx.lineWidth = 2;
-            ctx.stroke();
-            ctx.closePath();
-        }
-
-        function eraseLine(ctx, newX, newY) {
-            ctx.clearRect(newX - 10, newY - 10, 20, 20); // Clear a small area around the mouse position to simulate erasing
-        }
-
-        document.getElementById('export-pdf').addEventListener('click', () => {
-            const { jsPDF } = window.jspdf;
-            const doc = new jsPDF(); // Create a new jsPDF instance
-
-            let currentSlideIndex = 0;
-
-            // Iterate over all slides
-            Object.keys(drawings).forEach((slideId, index) => {
-                const slideCanvas = document.createElement('canvas');
-                slideCanvas.width = 1024; // Set desired width for the PDF
-                slideCanvas.height = 768; // Set desired height for the PDF
-                const ctx = slideCanvas.getContext('2d');
-
-                // Render drawings for each slide on its own canvas
-                drawings[slideId].forEach(({ x, y, newX, newY, color, tool }) => {
-                    ctx.strokeStyle = color || 'black'; // Use saved color, default to black
-                    ctx.lineWidth = tool === 'pen' ? 2 : 1;
-                    ctx.beginPath();
-                    ctx.moveTo(x, y);
-                    ctx.lineTo(newX, newY);
-                    ctx.stroke();
-                });
-
-                // Convert canvas to image and add to PDF
-                const slideImage = slideCanvas.toDataURL('image/png');
-                if (index > 0) {
-                    doc.addPage(); // Add a new page for each subsequent slide
-                }
-                doc.addImage(slideImage, 'PNG', 10, 10, 190, 150); // Position and size the image
-
-                currentSlideIndex++;
-            });
-
-            // Save the PDF
-            doc.save('presentation.pdf');
-        });
-    </script>
+    <script src="js/index.js"></script>
 
 </body>
 
